Thu Sep 16 21:14:08 CEST 2004 (tk)
----------------------------------
  * sigtool: add support for new database names

Thu Sep 16 19:02:38 BST 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	Handle RFC2047 encoded headers

Thu Sep 16 16:57:11 BST 2004 (njh)
----------------------------------
  * libclamav/message.c:	Handle double colons e.g.:
					Content-Type:: multipart/mixed

Thu Sep 16 15:25:26 BST 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	Handle mime types in quotation marks such as:
				Content-Type: "multipart/mixed"

Thu Sep 16 14:30:15 BST 2004 (trog)
-----------------------------------
  * libclamav/htmlnorm.c: properly initialise output buffer

Thu Sep 16 14:00:05 BST 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	Handle broken email headers that use equals signs or
				space to separate key from data insead of colon

Thu Sep 16 12:20:59 BST 2004 (njh)
----------------------------------
  * libvclamav/mbox.c:	Improved handling of line breaks in the middle of
				headers for multipart sections

Thu Sep 16 11:07:37 BST 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	If a false or invented encoding type is stated attempt
				to decode with all known decoders

Thu Sep 16 09:58:01 BST 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	Handle comments in the headers

Wed Sep 15 23:09:39 BST 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	FOLLOWURLS: check if normalisation is successful
		Scan for viruses where the mail has spaces before the colon
		after the 'Content-Transfer-Encoding'

Wed Sep 15 21:44:01 CEST 2004 (tk)
----------------------------------
  * freshclam: add support for version verification and additional protection
	       against invalid DNS replies
  * libclamav/others.c: add cl_retver()

Wed Sep 15 19:09:56 BST 2004 (njh)
----------------------------------